--- a/Lab 2/validation1.html
+++ b/Lab 2/validation1.html
@@ -1,5 +1,5 @@
 <html>
-<<<<<<< HEAD
+
 <title>
   Validation Form
 </title>
@@ -10,9 +10,27 @@
   Last Name<br>
   <input type="text" name="lastname"><br>
   Gender<br>
-  
+  <select name="Gender">
+    <option value="Male">Male</option>
+    <option value="Female">Female</option>
+  </select><br>
+  State<br>
+  <select name="State">
+    <option value="California">California</option>
+    <option value="Florida">Florida</option>
+    <option value="New York">New York</option>
+    <option value="Texas">Texas</option>
+    <option value="Hawaii">Hawaii</option>
+    <option value="Washington">Washington</option>
+    <option value="Colorado">Colorado</option>
+    <option value="Virginia">Virginia</option>
+    <option value="Iowa">Iowa</option>
+    <option value="Arizona">Arizona</option>
+  </select>
+
+
+
 </form>
-=======
->>>>>>> 157c93b7a7bbe50ae019d69fd2cf2d66212ab2b7
+
 
 </html>
