--- a/Lab 2/validation1.html
+++ b/Lab 2/validation1.html
@@ -8,9 +8,11 @@
 
 <form name="userInput">
   First Name<br>
-  <input type="text" name="firstName"><br>
+  <input type="text" name="firstName">
+  <div id="firstName"></div><br>
   Last Name<br>
-  <input type="text" name="lastName"><br>
+  <input type="text" name="lastName">
+  <div id="lastName"></div><br>
   Gender<br>
   <select name="gender">
     <option value="Male">Male</option>
