--- a/Lab 2/validation1.html
+++ b/Lab 2/validation1.html
@@ -17,7 +17,8 @@
   <select name="gender">
     <option value="Male">Male</option>
     <option value="Female">Female</option>
-  </select><br>
+  </select>
+  <div id="gender"></div><br>
   State<br>
   <select name="state">
     <option value="California">California</option>
@@ -31,6 +32,7 @@
     <option value="Iowa">Iowa</option>
     <option value="Arizona">Arizona</option>
   </select>
+  <div id="state"></div><br>
 </form>
 
 <button type="button" onclick="validateForm()">Continue</button>
