Commit with child checking

--- a/Lab 2/validation1.html
+++ b/Lab 2/validation1.html
@@ -15,12 +15,14 @@
   <div id="lastName"></div><br>
   Gender<br>
   <select name="gender">
+    <option value="Please Select">Please Select</option>
     <option value="Male">Male</option>
     <option value="Female">Female</option>
   </select>
   <div id="gender"></div><br>
   State<br>
   <select name="state">
+    <option value="Please Select">Please Select</option>
     <option value="California">California</option>
     <option value="Florida">Florida</option>
     <option value="New York">New York</option>
