--- a/Lab 2/validation2.html
+++ b/Lab 2/validation2.html
@@ -8,7 +8,8 @@
 
 <form name="Contact Information">
   Email:<br>
-  <input type="text" name="email"><br>
+  <input type="text" name="email">
+  <div id="emailDiv"></div><br>
   Phone:<br>
   <input type="text" name="phone"><br>
   Address:<br>
