--- a/Lab 2/validation2.html
+++ b/Lab 2/validation2.html
@@ -11,9 +11,11 @@
   <input type="text" name="email">
   <div id="emailDiv"></div><br>
   Phone:<br>
-  <input type="text" name="phone"><br>
+  <input type="text" name="phone">
+  <div id="phoneDiv"></div><br>
   Address:<br>
-  <input type="text" name="address"><br>
+  <input type="text" name="address">
+  <div id="addressDiv"></div><br>
 
 </form>
 
