very basics will make it look prettier obvi

--- a/Proj 1/Eventcreate.html
+++ b/Proj 1/Eventcreate.html
@@ -1,22 +1,14 @@
 <html>
 
-	<title>
-		Draw line
-	</title>
-	
-
 	  
 	<body>
+	<form>
+		Username:<input type="text" name="username"><br>
+		Password:<input type="text" name="password"><br>
+		<input type="button" value="Register"> 
+	</form>
 	
-
-		
-		<input id="timebutton" type="button" value="Start" onclick="startstopTime()" ></input>
-		<input type="button" id="Leftbutt" value="Left" onclick="choice = 'left'"></input>
-		<input type="button" id="Rightbutt" value="Right" onclick="choice = 'right'"></input>
-		
-		<canvas id="canvasId" width="500" height="500" style="border:1px solid #000000;"></canvas>
-
-		<script src = "drawline.js" </script>
-
-	<body>
+	
+	<p>Register with a username and password to start creating events</p>
+<body>
 </html>
