--- a/Proj 1/Main.html
+++ b/Proj 1/Main.html
@@ -1,22 +1,35 @@
 <html>
 
-	<title>
-		Draw line
-	</title>
+<title>
+EventCreator
+</title>
+<head>
+<style>
+div.top{
+	position:relative;
+	color:white;
+	background-color:blue;
+	width:100%;
+	padding:0;
+}
+div.linkposition{
+	position:absolute;
+	color:white;
+	right:10px;
+}
+</style>
+</head>
 	
+<body>
+	<div class = "top">
+		<h1>Event Creator</h1>
 
-	  
-	<body>
 	
-
-		
-		<input id="timebutton" type="button" value="Start" onclick="startstopTime()" ></input>
-		<input type="button" id="Leftbutt" value="Left" onclick="choice = 'left'"></input>
-		<input type="button" id="Rightbutt" value="Right" onclick="choice = 'right'"></input>
-		
-		<canvas id="canvasId" width="500" height="500" style="border:1px solid #000000;"></canvas>
-
-		<script src = "drawline.js" </script>
-
-	<body>
+	
+	<div class = "linkposition">
+	<button><a href="file:///C:/Users/Kenneth%20Black/Documents/Proj%201/Login.html">Login</a></button>
+	<button><a href="file:///C:/Users/Kenneth%20Black/Documents/Proj%201/Eventcreate.html">Register</a></button>
+	</div>
+	</div>
+<body>
 </html>
