actual login page to start

--- a/Proj 1/Eventcreate.html
+++ b/Proj 1/Eventcreate.html
@@ -3,12 +3,14 @@
 	  
 	<body>
 	<form>
-		Username:<input type="text" name="username"><br>
-		Password:<input type="text" name="password"><br>
-		<input type="button" value="Register"> 
+		Name of Event<input type="text" name="eventname"><br>
+		Description<input type="text" name="description"><br>
+		Location<input type="text" name="location"><br>
+		People to invite<input type="text" name="people"><br>
+		<input type="button" value="Create Event"> 
 	</form>
 	
 	
-	<p>Register with a username and password to start creating events</p>
+	<p>Create an event and add people to it</p>
 <body>
 </html>
