--- a/Proj 1/Login.html
+++ b/Proj 1/Login.html
@@ -1,17 +1,37 @@
 <html>
+	<style>
+	input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+	}
 
-	
-
-	  
+	button {
+    background-color: #0000A0 ;
+    color: #ADD8E6;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+	}
+	.container {
+		padding: 16px;
+	}
+	</style>  
 	<body>
 	<form>
-		Username:<input type="text" name="username"><br>
-		Password:<input type="text" name="password"><br>
-		<input type="button" value="Register"> 
+		<b>Username:</b><input type="text" name="username"><br>
+		<b>Password:</b><input type="text" name="password"><br>
+		<button type="submit">Login</button> 
 	</form>
 	
-	
-	<p>Login with you username and password</p>	
-		
+	<div class="container">
+		<p>Don't have an account?<p>
+		<p><a href="file:///E:/workspace/Coms319/Proj%201/Register.html"</a>Register Here!<p>
+	</div>	
 	<body>
 </html>
