--- a/Proj 1/Main.html
+++ b/Proj 1/Main.html
@@ -25,11 +25,11 @@ div.linkposition{
 		<h1>Event Creator</h1>
 
 	
-	
 	<div class = "linkposition">
-	<button><a href="file:///C:/Users/Kenneth%20Black/Documents/Proj%201/Login.html">Login</a></button>
-	<button><a href="file:///C:/Users/Kenneth%20Black/Documents/Proj%201/Eventcreate.html">Register</a></button>
+	<button><a href="file:///E:/workspace/Coms319/Proj%201/Login.html">Login</a></button>
+	<button><a href="file:///E:/workspace/Coms319/Proj%201/Register.html">Register</a></button>
 	</div>
+	<button><a href="file:///E:/workspace/Coms319/Proj%201/Eventcreate.html">Create Event</a></button>
 	</div>
 <body>
 </html>
