--- a/Port 1/webInterface/eventPage.html
+++ b/Port 1/webInterface/eventPage.html
@@ -13,31 +13,31 @@
   <body onload="eventGetRequest()">
 
     <div id="createEventTable">
-      <p>
-	<form>
-	<table border="1" style="width:680px">
-	  <tr>
-	    <th> Create New Event </th>
-	  </tr>
-	  <tr>
-	    <td> Event Name: <input type="text" id="eventName" size="110" placeholder="Name of Event"></td>
-	  </tr>
-	  <tr>
-	    <td> Event Description: <input type="text" id="eventDescription" size="110" style="height:50px" placeholder="Description of Event"></td>
-	  </tr>
-	  <tr>
-	    <td> Invite Friends:  <input type="text" id="invitedFriends" size="110" placeholder="Steve, John, Will"></td>
-	  </tr>
-	</table>
-	<input type="button" id="submit" value="Submit" onclick="createNewEvent()">
-	</form>
-      </p>
+    <p>
+    	<form>
+      	<table border="1" style="width:680px">
+      	  <tr>
+      	    <th> Create New Event </th>
+      	  </tr>
+      	  <tr>
+      	    <td> Event Name: <input type="text" id="eventName" size="110" placeholder="Name of Event"></td>
+      	  </tr>
+      	  <tr>
+      	    <td> Event Description: <input type="text" id="eventDescription" size="110" style="height:50px" placeholder="Description of Event"></td>
+      	  </tr>
+      	  <tr>
+      	    <td> Invite Friends:  <input type="text" id="invitedFriends" size="110" placeholder="Steve, John, Will"></td>
+      	  </tr>
+      	</table>
+    	  <input type="button" id="submit" value="Submit" onclick="createNewEvent()">
+    	</form>
+      <div id="eventAvail"></div>
+    </p>
 
-      <p>
-        <div id="tableHere"></div>
-      </p>
+    <p>
+      <div id="tableHere"></div>
+    </p>
     </div>
-
 
   </body>
 
