--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -7,9 +7,42 @@
     <h1>Welcome!</h1>
   </head>
   <body>
-    <input type="text" id="nameInput" name="nameInput" placeholder="Username"><div id="usernameDiv"></div><br>
+    <input type="text" id="usernameInput" name="usernameInput" placeholder="Username"><div id="usernameDiv"></div><br>
     <input type="password" id="passwordInput" name="passwordInput" placeholder="Password"><div id="passDiv"></div><br>  </body>
-    <input type="button" id="loginButton" onclick="loginUser()" name="loginButton" value="Login"><div id="loginDiv"></div>
+    <input type="button" id="loginButton" name="loginButton" value="Login"><div id="loginDiv"></div>
+    <div id="errorDiv"></div>
+
+    <script type="text/javascript">
+      var btn = document.getElementById("loginButton");
+      btn.onclick = function() {
+        username = document.getElementById("usernameInput").value;
+        pass = document.getElementById("passwordInput").value;
+
+        $(document).ready(function() {
+          $.ajax({
+              url:"login.php", //the page containing php script
+              type: "post", //request type,
+              dataType: 'html',
+              data: {username: username, password: pass},
+              success: function() {
+                //window.location.href = "viewposts.html";
+                //console.log(data);
+             },
+             error: function() {
+               var errorDiv = document.getElementById('errorDiv');
+               var message = document.createTextNode("Invalid Login");
+               if(errorDiv.hasChildNodes()){
+           			errorDiv.removeChild(errorDiv.childNodes[0]);
+           			errorDiv.appendChild(message);
+           		}else{
+           			errorDiv.appendChild(message);
+           		}
+             }
+           });
+        })
+
+      }
+    </script>
 
     <p>Not Registered?</p>
     <a href="signup.html">Register Here!</a>
