--- a/Lab 5/viewposts.html
+++ b/Lab 5/viewposts.html
@@ -166,5 +166,12 @@
 
     </script>
 
+    <script type="text/javascript">
+      var inboxBtn = document.getElementById('inbox');
+      inboxBtn.onclick = function() {
+        window.location = "inbox.html";
+      }
+    </script>
+
   </body>
 </html>
