Everything for librarian view except saving library to local storage correctly

--- a/Lab 4/booksLibrary.html
+++ b/Lab 4/booksLibrary.html
@@ -1,17 +1,19 @@
 <html>
-<head>
-<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script	src="booksLibrary.js"></script>
-<script	src="login.js"></script>
-</head>
+  <head>
+    <script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script	src="booksLibrary.js"></script>
+  </head>
 
-<body>
-<table border='2' id='lib'></table>
-<div id="tablecreate"></div>
-<br></br>
-<input id="inp4" type="text" name="BookName" placeholder="Book Name" hidden="no"><br>
-<input id="inp5" type="text" name="Category" placeholder="Shelf(art,science,sports,literature)" hidden="no"><br>
-<input type="button1" id="What" value="Add Book" hidden="no"/>
-</body>
+  <body>
+    <div id="tablecreate"></div>
+    <div id='bookInfo'></div>
+    <br></br>
+    <input id="inp4" type="text" name="BookName" placeholder="Book Name">
+    <input id="inp5" type="text" name="Category" placeholder="Shelf (art, science, sports, literature)" size="33">
+    <input type="button" id="addBookBtn" value="Add Book">
+    <br>
+    <br>
+    <input type="button" id="logout" value="Logout">
+  </body>
 
 </html>
