--- a/Lab 4/login.html
+++ b/Lab 4/login.html
@@ -20,7 +20,7 @@
 <body>
 <form action="login.js">
 <b>Username</b><input id="inp0" type="text" name="Username"><br>
-<b>Password</b><input id="inp1" type="text" name="Password"><br>
+<b>Password</b><input id="inp1" type="password" name="Password"><br>
 <input type="button" class="button" id="login" value="Login"/>
 </form>
 
